--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,17 @@
 .App {
     text-align: center;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    min-height: 100vh;
+  }
+  
+  .center {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-#tsparticles {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    left: 0;
+  }
+  
+  .particles {
+    position: fixed; /*does not get scrolled (is in fixed position*/
     top: 0;
-    z-index: -1;
-}
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1; /*means that this will be 1 layer below other components (not overwrites them). Higher the level, more on top it will be*/
+  }
